@@ -1,5 +1,9 @@
 $Id: ChangeLog 2007/08/27 19:13:36 mallet $
 
+2007/09/07
+	1. Correction in notification treatment: adding an obstacle is now different from inserting a new list of obstacles.
+	2. Assemblies are now supported.
+	
 kppInterface 1.0 released August 27th, 2007
 
 	11. Replaced ChppDevice by CkppDeviceComponent since 
